# ConfidentialPackageTools

./: .gitignore  README.md
cpk/: Cargo.toml
cpk-sys/: Cargo.toml  build.rs
cpk-sys/src/: lib.rs
cpk-sys/src/c/: ConfidentialPackageSpecification_args.h  ConfidentialPackageSpecification_u.h  cpmsim.c
cpk-tool/: Cargo.toml  test.json
cpk-tool/src/: common.rs  error.rs  lib.rs  main.rs  util.rs
cpk-tool/src/cli/: mod.rs
cpk-tool/src/prototype/: builder.rs  installer.rs  mod.rs  package.rs
cpk-tool/src/subcommands/: build.rs  install.rs  mod.rs  pubkey.rs  sync.rs
cpk/src/: lib.rs
cpk/src/cpm/: mod.rs
cpk/src/keys/: cpm.rs  error.rs  file.rs  http.rs  local.rs  mod.rs  parsec.rs
cpk/src/package/: error.rs  mod.rs
cpk/src/package/frame/: mod.rs
cpk/src/package/frame/v1/: mod.rs
cpk/src/package/manifest/: mod.rs
cpk/src/package/manifest/v1/: mod.rs
