[package]
name = "cpk-tool"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
atty = "0.2.14"
chrono = "0.4.19"
clap = "3.0.0-beta.1"
structopt = "0.3.17"
thiserror = "1.0.20"
env_logger = "0.8.2"
ring = { version = "0.16.20", optional = true }
rsa = { version = "0.5.0", features = ["alloc"] }
pkcs1 = { version = "0.2.3", features = ["pem"] }
pkcs8 = { version = "0.7.5", features = ["pem"] }
serde = "1.0.123"
serde_json = "1.0.64"
sha2 = "0.9.5"
log = "0.4.14"
cpk = { path = "../cpk" }
x509-parser = "0.10.0"

[lib]
name = "cpk_tool"
path = "src/lib.rs"

[[bin]]
name = "cpk-tool"

[features]
default = [ "build", "install", "sync" ]
build = [ "ring" ]
sync = []
install = []
cpm-simulator = [ "cpk/cpm-simulator" ]