[package]
name = "cpk"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpk-sys = { path = "../cpk-sys" }
thiserror = "1.0.20"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
bincode = "1.3.3"
reqwest = { version = "0.11.4", features = ["json", "blocking"] }
base64 = "0.13.0"
picky-asn1  = "0.3.0"
picky-asn1-der = "0.2.4"
picky-asn1-x509 = "0.6.1"
