[package]
name = "cpk"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpk-sys = { path = "../cpk-sys", optional = true }
thiserror = "1.0.20"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
bincode = "1.3.3"
reqwest = { version = "0.11.4", features = ["json", "blocking"], optional = true }
base64 = { version = "0.13.0", optional = true }
picky-asn1  = { version = "0.3.0", optional = true }
picky-asn1-der = { version = "0.2.4", optional = true }
picky-asn1-x509 = { version = "0.6.1", optional = true }
pkcs1 = { version = "0.2.3", features = ["pem"], optional = true }
parsec-client = { version = "0.12.0", optional = true }
rsa = { version = "0.5.0", features = ["alloc"], optional = true }
rand = { version = "0.8.0", optional = true }

[features]
cpm = [ "cpk-sys" ]
cpm-simulator = [ "cpk-sys/cpm-simulator" ]
key-management = [ "reqwest", "base64", "parsec-client", "picky-asn1", "picky-asn1-der", "picky-asn1-x509", "pkcs1", "rsa", "rand" ]